--- a/package.json
+++ b/package.json
@@ -13,17 +13,20 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-vercel": "^5.7.1",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"prettier": "^3.3.2",
 		"prettier-plugin-svelte": "^3.2.6",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"svelte-preprocess": "^6.0.3",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
 	"dependencies": {
 		"gsap": "^3.12.5",
+		"resend": "^4.5.0",
 		"three": "^0.170.0"
 	}
 }
